--- a/contacto.html
+++ b/contacto.html
@@ -35,18 +35,24 @@
   <!-- Usa las mismas clases que el H2 de la izquierda -->
   <h2 class="text-3xl font-bold mb-4">Agenda una llamada</h2>
 
-  <!-- Igual que el párrafo de la izquierda -->
-  <p class="text-xl text-slate-600 mb-6">
+<!-- Tarjeta derecha (igual que la izquierda) -->
+<div class="p-6 md:p-8 bg-white rounded-[24px] shadow text-base">
+  <!-- COPIA las clases del H2 izquierdo -->
+  <h2 class="text-4xl font-extrabold mb-6 tracking-tight">Agenda una llamada</h2>
+
+  <!-- COPIA las clases del párrafo izquierdo -->
+  <p class="text-2xl text-slate-600 mb-8 leading-snug">
     Elige el horario que mejor te encaje para hablar con nosotros.
   </p>
 
-  <!-- Botón azul, mismo estilo que “Enviar email” y abre en nueva pestaña -->
-  <a href="https://calendly.com/alex-kairu/30min"
+  <!-- Botón azul igual que el de la izquierda -->
+  <a href="https://calendly.com/tu-usuario/30min"
      target="_blank" rel="noopener"
-     class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium hover:bg-kairu-700">
+     class="inline-flex items-center justify-center h-14 px-8 rounded-2xl bg-kairu-600 text-white text-lg font-medium hover:bg-kairu-700">
     Reservar en Calendly
   </a>
 </div>
+
 </section>
 
 <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
