--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="card p-6">
           <div class="grid grid-cols-2 gap-4">
             <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">+10 años</p><p class="text-sm text-slate-600">abriendo mercado ES/LATAM</p></div>
-            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Red de partners</p><p class="text-sm text-slate-600">y cuentas estratégicas</p></div>
-            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Modelo flexible</p><p class="text-sm text-slate-600">fijo mínimo + variable por éxito</p></div>
-            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Método transferible</p><p class="text-sm text-slate-600">guías prácticas para tu equipo</p></div>
+            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Red partners</p><p class="text-sm text-slate-600">y cuentas estratégicas</p></div>
+            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Flexible</p><p class="text-sm text-slate-600">Modelo flexible: fijo mínimo + variable por éxito</p></div>
+            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Transferible</p><p class="text-sm text-slate-600">Método transferible: guías prácticas para tu equipo</p></div>
           </div>
         </div>
       </div>
