--- a/servicios.html
+++ b/servicios.html
@@ -32,12 +32,45 @@
 <section class="py-16"><div class="mx-auto px-4 sm:px-6 container-narrow">
 <h1 class="text-3xl font-bold">Paquetes de trabajo</h1>
 <div class="mt-8 grid md:grid-cols-3 gap-6">
-<div class="card p-6"><h3 class="font-semibold text-lg">Market Entry Sprint (4 semanas)</h3><ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700"><li>ICP y mapa de actores</li><li>Propuesta de valor y guiones</li><li>30 cuentas objetivo + 5–10 meetings</li></ul></div>
-<div class="card p-6"><h3 class="font-semibold text-lg">Partner & Channel Build</h3><ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700"><li>Identificación y acuerdos</li><li>Onboarding y activación</li><li>Co‑marketing local</li></ul></div>
-<div class="card p-6"><h3 class="font-semibold text-lg">Ventas como Servicio</h3><ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700"><li>Prospección, demos y RFPs</li><li>Gestión de pipeline y closing</li><li>Handover y playbooks</li></ul></div>
-</div>
-<p class="mt-6 text-sm text-slate-600">Modelo flexible: fijo mínimo + variable por éxito. Lo adaptamos a tu etapa.</p>
-</div></section>
+<!-- Market Entry Sprint -->
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="text-xl font-bold mb-4">Market Entry Sprint (4 semanas)</h3>
+        <p class="text-slate-600 mb-3">Prueba rápida para validar tu entrada en España o LATAM:</p>
+        <ul class="list-disc list-inside text-slate-600 space-y-1">
+          <li>Mapeo de clientes y actores clave</li>
+          <li>Mensajes y propuesta de valor</li>
+          <li>5–10 primeras reuniones con potenciales clientes</li>
+        </ul>
+      </div>
+
+      <!-- Partner & Channel Build -->
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="text-xl font-bold mb-4">Construcción de Partners y Canales</h3>
+        <p class="text-slate-600 mb-3">Creamos tu red de aliados locales:</p>
+        <ul class="list-disc list-inside text-slate-600 space-y-1">
+          <li>Identificación de socios estratégicos</li>
+          <li>Acuerdos y activación comercial</li>
+          <li>Acciones de co-marketing para crecer más rápido</li>
+        </ul>
+      </div>
+
+      <!-- Ventas como Servicio -->
+      <div class="p-6 bg-white rounded-2xl shadow">
+        <h3 class="text-xl font-bold mb-4">Ventas como Servicio</h3>
+        <p class="text-slate-600 mb-3">Equipo de ventas temporal sin costes fijos:</p>
+        <ul class="list-disc list-inside text-slate-600 space-y-1">
+          <li>Prospección y demos con clientes</li>
+          <li>Gestión de pipeline y cierres</li>
+          <li>Transferencia de procesos y manuales a tu equipo</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <p class="mt-8 text-center text-slate-500">
+      Modelo flexible: fijo mínimo + variable por éxito. Adaptamos el plan según tu etapa y necesidades.
+    </p>
+  </div></section>
 
 <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
   <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
