--- a/servicios.html
+++ b/servicios.html
@@ -34,7 +34,7 @@
 <div class="mt-8 grid md:grid-cols-3 gap-6">
 <!-- Market Entry Sprint -->
       <div class="p-6 bg-white rounded-2xl shadow">
-        <h3 class="text-xl font-bold mb-4">Market Entry Sprint (4 semanas)</h3>
+        <h3 class="text-xl font-bold mb-4">Validación de Mercado (4 semanas)</h3>
         <p class="text-slate-600 mb-3">Prueba rápida para validar tu entrada en España o LATAM:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1">
           <li>Mapeo de clientes y actores clave</li>
