--- a/servicios.html
+++ b/servicios.html
@@ -39,28 +39,28 @@
         <ul class="list-disc list-inside text-slate-600 space-y-1">
           <li>Mapeo de clientes y actores clave</li>
           <li>Mensajes y propuesta de valor</li>
-          <li>5–10 primeras reuniones con potenciales clientes</li>
+          <li>5–10 reuniones iniciales con clientes potenciales</li>
         </ul>
       </div>
 
       <!-- Partner & Channel Build -->
       <div class="p-6 bg-white rounded-2xl shadow">
         <h3 class="text-xl font-bold mb-4">Construcción de Partners y Canales</h3>
-        <p class="text-slate-600 mb-3">Creamos tu red de aliados locales:</p>
+        <p class="text-slate-600 mb-3">Creamos tu red de aliados locales para acelerar el crecimiento:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1">
           <li>Identificación de socios estratégicos</li>
           <li>Acuerdos y activación comercial</li>
-          <li>Acciones de co-marketing para crecer más rápido</li>
+          <li>Co-marketing conjunto con partners</li>
         </ul>
       </div>
 
       <!-- Ventas como Servicio -->
       <div class="p-6 bg-white rounded-2xl shadow">
         <h3 class="text-xl font-bold mb-4">Ventas como Servicio</h3>
-        <p class="text-slate-600 mb-3">Equipo de ventas temporal sin costes fijos:</p>
+        <p class="text-slate-600 mb-3">Equipo de ventas temporal sin costes fijos, listo para escalar:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1">
-          <li>Prospección y demos con clientes</li>
-          <li>Gestión de pipeline y cierres</li>
+          <li>Prospección, demos y gestión de pipeline</li>
+          <li>Cierres con clientes estratégicos</li>
           <li>Transferencia de procesos y manuales a tu equipo</li>
         </ul>
       </div>
