--- a/servicios.html
+++ b/servicios.html
@@ -35,32 +35,32 @@
 <!-- Market Entry Sprint -->
       <div class="p-6 bg-white rounded-2xl shadow">
         <h3 class="text-xl font-bold mb-4">Validación de Mercado (4 semanas)</h3>
-        <p class="text-slate-600 mb-3">Prueba rápida para validar tu entrada en España o LATAM:</p>
+        <p class="text-slate-600 mb-3">Comprueba rápido si tu producto encaja en España o LATAM:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1">
-          <li>Mapeo de clientes y actores clave</li>
-          <li>Mensajes y propuesta de valor</li>
-          <li>5–10 reuniones iniciales con clientes potenciales</li>
+          <li>Identificación de clientes y actores clave</li>
+          <li>Mensajes claros y propuesta de valor adaptada</li>
+          <li>5–10 reuniones iniciales con potenciales clientes</li>
         </ul>
       </div>
 
       <!-- Partner & Channel Build -->
       <div class="p-6 bg-white rounded-2xl shadow">
         <h3 class="text-xl font-bold mb-4">Construcción de Partners y Canales</h3>
-        <p class="text-slate-600 mb-3">Creamos tu red de aliados locales para acelerar el crecimiento:</p>
+        <p class="text-slate-600 mb-3">Expande tu red con aliados estratégicos:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1">
-          <li>Identificación de socios estratégicos</li>
-          <li>Acuerdos y activación comercial</li>
-          <li>Co-marketing conjunto con partners</li>
+          <li>Búsqueda e identificación de socios locales</li>
+          <li>Acuerdos de colaboración y activación comercial</li>
+          <li>Acciones de co-marketing para acelerar la entrada</li>
         </ul>
       </div>
 
       <!-- Ventas como Servicio -->
       <div class="p-6 bg-white rounded-2xl shadow">
         <h3 class="text-xl font-bold mb-4">Ventas como Servicio</h3>
-        <p class="text-slate-600 mb-3">Equipo de ventas temporal sin costes fijos, listo para escalar:</p>
+        <p class="text-slate-600 mb-3">Un equipo de ventas temporal para crecer sin costes fijos:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1">
-          <li>Prospección, demos y gestión de pipeline</li>
-          <li>Cierres con clientes estratégicos</li>
+          <li>Prospección y demos con clientes cualificados</li>
+          <li>Gestión de pipeline y cierre de oportunidades</li>
           <li>Transferencia de procesos y manuales a tu equipo</li>
         </ul>
       </div>
