--- a/en/services.html
+++ b/en/services.html
@@ -29,15 +29,53 @@
   </div>
 </header>
 
-<section class="py-16"><div class="mx-auto px-4 sm:px-6 container-narrow">
-<h1 class="text-3xl font-bold">Work packages</h1>
-<div class="mt-8 grid md:grid-cols-3 gap-6">
-<div class="card p-6"><h3 class="font-semibold text-lg">Market Entry Sprint (4 weeks)</h3><ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700"><li>ICP and landscape</li><li>Value prop & sales scripts</li><li>30 target accounts & 5–10 meetings</li></ul></div>
-<div class="card p-6"><h3 class="font-semibold text-lg">Partner & Channel Build</h3><ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700"><li>Identification & agreements</li><li>Onboarding & activation</li><li>Local co‑marketing</li></ul></div>
-<div class="card p-6"><h3 class="font-semibold text-lg">Sales as a Service</h3><ul class="mt-3 text-sm list-disc pl-5 space-y-1 text-slate-700"><li>Prospecting, demos & RFPs</li><li>Pipeline management & closing</li><li>Handover & playbooks</li></ul></div>
-</div>
-<p class="mt-6 text-sm text-slate-600">Flexible model: small retainer + success fee. We adapt to your stage.</p>
-</div></section>
+<section class="py-16" id="services">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <h2 class="text-3xl md:text-4xl font-extrabold mb-12">Work Packages</h2>
+
+    <div class="grid md:grid-cols-3 gap-6">
+      
+      <!-- Market Validation -->
+      <div class="p-6 bg-white rounded-2xl shadow flex flex-col h-full">
+        <h3 class="text-xl font-bold mb-4">Market Validation (4 weeks)</h3>
+        <p class="text-slate-600 mb-3">Quickly test if your product fits in Spain or LATAM:</p>
+        <ul class="list-disc list-inside text-slate-600 space-y-1 flex-grow">
+          <li>Identification of key customers and decision makers</li>
+          <li>Clear messaging and localized value proposition</li>
+          <li>5–10 initial meetings with potential clients</li>
+        </ul>
+      </div>
+
+      <!-- Partner & Channel Development -->
+      <div class="p-6 bg-white rounded-2xl shadow flex flex-col h-full">
+        <h3 class="text-xl font-bold mb-4">Partner & Channel Development</h3>
+        <p class="text-slate-600 mb-3">Expand your network with the right local allies:</p>
+        <ul class="list-disc list-inside text-slate-600 space-y-1 flex-grow">
+          <li>Search and identification of strategic partners</li>
+          <li>Collaboration agreements and commercial activation</li>
+          <li>Co-marketing actions to accelerate market entry</li>
+        </ul>
+      </div>
+
+      <!-- Sales as a Service -->
+      <div class="p-6 bg-white rounded-2xl shadow flex flex-col h-full">
+        <h3 class="text-xl font-bold mb-4">Sales as a Service</h3>
+        <p class="text-slate-600 mb-3">A temporary sales team to grow without fixed costs:</p>
+        <ul class="list-disc list-inside text-slate-600 space-y-1 flex-grow">
+          <li>Prospecting and demos with qualified clients</li>
+          <li>Pipeline management and closing deals</li>
+          <li>Handover of processes and playbooks to your team</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <p class="mt-8 text-center text-slate-500">
+      Flexible model: base fee + success-based variable. We adapt to your stage and needs.
+    </p>
+  </div>
+</section>
+
 
 <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
   <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
