--- a/en/services.html
+++ b/en/services.html
@@ -48,7 +48,7 @@
 
       <!-- Partner & Channel Development -->
       <div class="p-6 bg-white rounded-2xl shadow flex flex-col h-full">
-        <h3 class="text-xl font-bold mb-4">Partner & Channel Development</h3>
+        <h3 class="text-xl font-bold mb-4">Partners & Channels</h3>
         <p class="text-slate-600 mb-3">Expand your network with the right local allies:</p>
         <ul class="list-disc list-inside text-slate-600 space-y-1 flex-grow">
           <li>Search and identification of strategic partners</li>
