--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
         <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
         <span class="text-slate-300">|</span>
         <a href="/" class="hover:text-kairu-600">ES</a>
-        <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Talk</a>
+        <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Let´s Talk</a>
       </nav>
       <button id="menuBtn" class="md:hidden p-2" aria-label="Open menu">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 6h18M3 12h18M3 18h18"/></svg>
