--- a/en/index.html
+++ b/en/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="card p-6">
           <div class="grid grid-cols-2 gap-4">
-            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">+10</p><p class="text-sm text-slate-600">years opening ES/LATAM</p></div>
+            <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">+10 years</p><p class="text-sm text-slate-600">developing Spain/LATAM markets</p></div>
             <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Network</p><p class="text-sm text-slate-600">of partners & strategic accounts</p></div>
             <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Flexible</p><p class="text-sm text-slate-600">small retainer + success fee</p></div>
             <div class="p-4 rounded-xl bg-slate-50"><p class="text-3xl font-bold">Transferable</p><p class="text-sm text-slate-600">practical playbooks for your team</p></div>
