--- a/contacto.html
+++ b/contacto.html
@@ -73,7 +73,7 @@
       <h2 class="text-2xl font-bold">Agenda una llamada</h2>
       <p class="mt-2 text-slate-600">Elige el horario que mejor te encaje para hablar con nosotros.</p>
       <a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white hover:bg-kairu-700"
-         href="https://calendly.com/tu-usuario/30min"
+         href="https://calendly.com/alex-kairu/30min"
          target="_blank" rel="noopener">
         Reservar en Calendly
       </a>
