--- a/en/contact.html
+++ b/en/contact.html
@@ -1,44 +1,99 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact – Kairu Tech</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact · Kairu Tech</title>
+  <meta name="description" content="Get in touch to explore your entry or expansion in Spain & LATAM.">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = { theme: { extend: { colors: { kairu: {
+      50:'#eff6ff',100:'#dbeafe',200:'#bfdbfe',300:'#93c5fd',400:'#60a5fa',500:'#3b82f6',600:'#2563eb',700:'#1d4ed8',800:'#1e40af',900:'#1e3a8a'
+    }}}}};
+  </script>
+  <style>
+    .card { border-radius: 1rem; box-shadow: 0 8px 24px rgba(2,6,23,.06); background: rgba(255,255,255,.9); backdrop-filter: blur(6px); }
+    .container-narrow { max-width: 1100px; }
+  </style>
 </head>
-<body class="bg-slate-50 text-slate-800">
+<body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
 
-  <section class="py-16">
-    <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-2 gap-8">
-
-      <!-- Email Contact -->
-      <div class="p-6 bg-white rounded-2xl shadow">
-        <h2 class="text-2xl font-bold mb-4">Contact</h2>
-        <p class="text-slate-600 mb-6">
-          Tell us in 3–4 lines your goal and current situation.
-        </p>
-        <a href="mailto:alex@kairu.tech"
-           class="px-6 py-3 bg-blue-600 text-white rounded-xl font-medium hover:bg-blue-700 transition">
-          Send Email
-        </a>
-        <p class="mt-4 text-slate-500">Address: Madrid & London</p>
-      </div>
-
-      <!-- Schedule a Call -->
-      <div class="p-6 bg-white rounded-2xl shadow">
-        <h2 class="text-2xl font-bold mb-4">Schedule a Call</h2>
-        <p class="text-slate-600 mb-6">
-          Pick the time that works best for you to speak with us.
-        </p>
-        <a href="https://calendly.com/alex-kairu/30min"
-           target="_blank" rel="noopener noreferrer"
-           class="px-6 py-3 bg-blue-600 text-white rounded-xl font-medium hover:bg-blue-700 transition">
-          Book on Calendly
-        </a>
-      </div>
-
+<header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <div class="flex items-center justify-between h-16">
+      <a href="/en/" class="flex items-center gap-3">
+        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600">
+          <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z" stroke="currentColor" stroke-width="1.2" fill="none"/>
+        </svg>
+        <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
+      </a>
+      <nav class="hidden md:flex items-center gap-6 text-sm">
+        <a href="/en/#services" class="hover:text-kairu-600">Services</a>
+        <a href="/en/services.html" class="hover:text-kairu-600">Packages</a>
+        <a href="/en/contact.html" class="hover:text-kairu-600 font-semibold">Contact</a>
+        <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
+        <span class="text-slate-300">|</span>
+        <a href="/" class="hover:text-kairu-600">ES</a>
+        <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Let’s Talk</a>
+      </nav>
+      <button id="menuBtn" class="md:hidden p-2" aria-label="menu">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M3 6h18M3 12h18M3 18h18"/>
+        </svg>
+      </button>
     </div>
-  </section>
+  </div>
+  <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
+    <div class="px-4 py-3 flex flex-col gap-3 text-sm">
+      <a href="/en/#services" class="hover:text-kairu-600">Services</a>
+      <a href="/en/services.html" class="hover:text-kairu-600">Packages</a>
+      <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
+      <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
+      <div class="pt-2"><a href="/" class="hover:text-kairu-600">ES</a></div>
+      <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">Let’s Talk</a>
+    </div>
+  </div>
+</header>
+
+<section class="py-16">
+  <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-2 gap-6">
+    <!-- Left card -->
+    <div class="card p-6">
+      <h2 class="text-2xl font-bold">Contact</h2>
+      <p class="mt-2 text-slate-600">Tell us in 3–4 lines your goal and current status.</p>
+      <a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white hover:bg-kairu-700"
+         href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Inquiry&body=Hi%20Kairu,%20we'd%20like%20to%20explore%20the%20Spain%20/%20LATAM%20market%20for%20...">
+        Send email
+      </a>
+      <p class="text-xs text-slate-500 mt-3">Address: Madrid & London</p>
+    </div>
+
+    <!-- Right card -->
+    <div class="card p-6">
+      <h2 class="text-2xl font-bold">Schedule a call</h2>
+      <p class="mt-2 text-slate-600">Pick a time that suits you best.</p>
+      <a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white hover:bg-kairu-700"
+         href="https://calendly.com/alex-kairu/30min"
+         target="_blank" rel="noopener">
+        Book on Calendly
+      </a>
+    </div>
+  </div>
+</section>
+
+<footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
+  <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
+    <p>© <span id="year"></span> Kairu Tech · Madrid & London</p>
+    <div class="flex items-center gap-4"><a href="/en/legal.html" class="hover:text-kairu-600">Legal</a></div>
+  </div>
+</footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.getElementById('menuBtn').addEventListener('click', () => {
+    document.getElementById('mobileMenu').classList.toggle('hidden');
+  });
+</script>
 
 </body>
 </html>
