--- a/en/contact.html
+++ b/en/contact.html
@@ -62,7 +62,7 @@
       <h2 class="text-2xl font-bold">Contact</h2>
       <p class="mt-2 text-slate-600">Tell us in 3–4 lines your goal and current status.</p>
       <a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white hover:bg-kairu-700"
-         href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Inquiry&body=Hi%20Kairu,%20we'd%20like%20to%20explore%20the%20Spain%20/%20LATAM%20market%20for%20...">
+         href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Inquiry&body=Hi%20Alex,%20we'd%20like%20to%20explore%20the%20Spain%20/%20LATAM%20market%20for%20...">
         Send email
       </a>
       <p class="text-xs text-slate-500 mt-3">Address: Madrid & London</p>
