--- a/contacto.html
+++ b/contacto.html
@@ -62,7 +62,7 @@
       <h2 class="text-2xl font-bold">Contacto</h2>
       <p class="mt-2 text-slate-600">Cuéntanos en 3–4 líneas tu objetivo y el estado actual.</p>
       <a class="mt-4 inline-block px-5 py-3 rounded-xl bg-kairu-600 text-white hover:bg-kairu-700"
-         href="mailto:alex@kairu.tech?subject=Kairu%20Tech%20-%20Consulta&body=Hola%20Kairu,%20queremos%20explorar%20el%20mercado%20de%20ES/LATAM%20para%20...">
+         href="mailto:alex@kairu.tech?subject=Alex%20Tech%20-%20Consulta&body=Hola%20Kairu,%20queremos%20explorar%20el%20mercado%20de%20ES/LATAM%20para%20...">
         Enviar email
       </a>
       <p class="text-xs text-slate-500 mt-3">Dirección: Madrid & London</p>
