--- a/en/legal.html
+++ b/en/legal.html
@@ -29,15 +29,31 @@
   </div>
 </header>
 
-<section class="py-16"><div class="mx-auto px-4 sm:px-6 container-narrow prose max-w-none">
-<h1 class="text-3xl font-bold">Legal Notice</h1>
-<p>This website is owned by Kairu Tech. Contact: <a href="mailto:alex@kairu.tech">alex@kairu.tech</a>. Location: Madrid & London.</p>
-<h2 class="text-2xl font-bold mt-8">Privacy Policy</h2>
-<p>We only process the personal data you voluntarily send us by email. The legal basis is your request for information. We do not share data with third parties unless legally required. You may exercise your rights by writing to <a href="mailto:alex@kairu.tech">alex@kairu.tech</a>.</p>
-<h2 class="text-2xl font-bold mt-8">Cookies</h2>
-<p>By default, this site does not install own tracking cookies. If third‑party analytics tools are added, this section will be updated and consent will be requested where appropriate.</p>
-<p class="text-xs text-slate-500 mt-6">This text is informative and does not constitute legal advice. Adapt it to your context.</p>
-</div></section>
+<section class="py-16">
+  <div class="mx-auto px-4 sm:px-6 container-narrow prose max-w-none">
+    
+    <h1 class="text-3xl font-bold">Legal Notice</h1>
+    <p>This website is owned by <strong>Kairu Tech</strong>.<br>
+    Contact: <a href="mailto:alex@kairu.tech">alex@kairu.tech</a><br>
+    Location: Madrid &amp; London</p>
+
+    <h2 class="text-2xl font-bold mt-8">Privacy Policy</h2>
+    <p>We only process the data you voluntarily provide (for example, via email or when scheduling a meeting).  
+    The legal basis for processing is your request for information.  
+    We do not share your data with third parties unless legally required.  
+    You can exercise your rights of access, rectification and deletion by writing to <a href="mailto:alex@kairu.tech">alex@kairu.tech</a>.</p>
+
+    <h2 class="text-2xl font-bold mt-8">Cookies</h2>
+    <p>By default, this site does not install tracking cookies.  
+    If external analytics or marketing tools are added, this policy will be updated and consent will be requested when appropriate.</p>
+
+    <h2 class="text-2xl font-bold mt-8">Limitation of Liability</h2>
+    <p>The information published on this site is general and for informational purposes only.  
+    Kairu Tech is not responsible for damages that may arise from the use of the information contained on this website.</p>
+
+  </div>
+</section>
+
 
 <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
   <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
