--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="#servicios" class="hover:text-kairu-600">Servicios</a>
         <a href="/servicios.html" class="hover:text-kairu-600">Paquetes</a>
+        <a href="/kids.html" class="hover:text-kairu-600">Kids</a>
         <a href="/contacto.html" class="hover:text-kairu-600">Contacto</a>
         <a href="/legal.html" class="hover:text-kairu-600">Legal</a>
         <span class="text-slate-300">|</span>
