--- a/contacto.html
+++ b/contacto.html
@@ -30,6 +30,7 @@
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="/#servicios" class="hover:text-kairu-600">Servicios</a>
         <a href="/servicios.html" class="hover:text-kairu-600">Paquetes</a>
+        <a href="/kids.html" class="hover:text-kairu-600">Kids</a>
         <a href="/contacto.html" class="hover:text-kairu-600">Contacto</a>
         <a href="/legal.html" class="hover:text-kairu-600">Legal</a>
         <span class="text-slate-300">|</span>
@@ -47,6 +48,7 @@
     <div class="px-4 py-3 flex flex-col gap-3 text-sm">
       <a href="/#servicios" class="hover:text-kairu-600">Servicios</a>
       <a href="/servicios.html" class="hover:text-kairu-600">Paquetes</a>
+      <a href="/kids.html" class="hover:text-kairu-600">Kids</a>
       <a href="/contacto.html" class="hover:text-kairu-600">Contacto</a>
       <a href="/legal.html" class="hover:text-kairu-600">Legal</a>
       <div class="pt-2"><a href="/en/" class="hover:text-kairu-600">EN</a></div>
