--- a/kids.html
+++ b/kids.html
@@ -76,10 +76,11 @@
           Abrimos colegios, partners y canales con ejecución local y foco en resultados.
         </p>
         <div class="mt-6 flex gap-3 flex-wrap">
-          <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Hablar 15 min</a>
+          <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">Explorar Colaboración</a>
           <a href="/servicios.html" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">Ver paquetes</a>
         </div>
-        <div class="mt-6 text-xs text-slate-500">Kids audio & storytelling · Language learning · Playful EdTech · Educación 3–8.</div>
+        <div class="mt-6 text-xs text-slate-500">Audio & storytelling · Language learning · Playful learning · Educación 3–8.
+</div>
       </div>
 
       <div class="card p-6">
