--- a/en/services.html
+++ b/en/services.html
@@ -16,14 +16,16 @@
         <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600"><path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z" stroke="currentColor" stroke-width="1.2" fill="none"/></svg>
         <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
       </a>
-      <nav class="hidden md:flex items-center gap-6 text-sm"><a href="/en/#servicios" class="hover:text-kairu-600">Services</a><a href="/en/services.html" class="hover:text-kairu-600">Packages</a><a href="/en/contact.html" class="hover:text-kairu-600">Contact</a><a href="/en/legal.html" class="hover:text-kairu-600">Legal</a><span class="text-slate-300">|</span><a href="/" class="hover:text-kairu-600">ES</a>
+      <nav class="hidden md:flex items-center gap-6 text-sm"><a href="/en/#servicios" class="hover:text-kairu-600">Services</a><a href="/en/services.html" class="hover:text-kairu-600">Packages</a><a href="/en/kids.html" class="hover:text-kairu-600">Kids</a>
+<a href="/en/contact.html" class="hover:text-kairu-600">Contact</a><a href="/en/legal.html" class="hover:text-kairu-600">Legal</a><span class="text-slate-300">|</span><a href="/" class="hover:text-kairu-600">ES</a>
         <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">Talk</a>
       </nav>
       <button id="menuBtn" class="md:hidden p-2" aria-label="menu"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M3 6h18M3 12h18M3 18h18"/></svg></button>
     </div>
   </div>
   <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
-    <div class="px-4 py-3 flex flex-col gap-3 text-sm"><a href="/en/#servicios" class="hover:text-kairu-600">Services</a><a href="/en/services.html" class="hover:text-kairu-600">Packages</a><a href="/en/contact.html" class="hover:text-kairu-600">Contact</a><a href="/en/legal.html" class="hover:text-kairu-600">Legal</a><div class="pt-2"><a href="/" class="hover:text-kairu-600">ES</a></div>
+    <div class="px-4 py-3 flex flex-col gap-3 text-sm"><a href="/en/#servicios" class="hover:text-kairu-600">Services</a><a href="/en/services.html" class="hover:text-kairu-600">Packages</a><a href="/en/kids.html" class="hover:text-kairu-600">Kids</a>
+<a href="/en/contact.html" class="hover:text-kairu-600">Contact</a><a href="/en/legal.html" class="hover:text-kairu-600">Legal</a><div class="pt-2"><a href="/" class="hover:text-kairu-600">ES</a></div>
       <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">Talk</a>
     </div>
   </div>
