--- a/en/contact.html
+++ b/en/contact.html
@@ -30,6 +30,7 @@
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="/en/#services" class="hover:text-kairu-600">Services</a>
         <a href="/en/services.html" class="hover:text-kairu-600">Packages</a>
+        <a href="/en/kids.html" class="hover:text-kairu-600">Kids</a>
         <a href="/en/contact.html" class="hover:text-kairu-600 font-semibold">Contact</a>
         <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
         <span class="text-slate-300">|</span>
@@ -47,6 +48,7 @@
     <div class="px-4 py-3 flex flex-col gap-3 text-sm">
       <a href="/en/#services" class="hover:text-kairu-600">Services</a>
       <a href="/en/services.html" class="hover:text-kairu-600">Packages</a>
+      <a href="/en/kids.html" class="hover:text-kairu-600">Kids</a>
       <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
       <a href="/en/legal.html" class="hover:text-kairu-600">Legal</a>
       <div class="pt-2"><a href="/" class="hover:text-kairu-600">ES</a></div>
