--- a/en/schools.html
+++ b/en/schools.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Schools · Screen-free Audio Storytelling · Kairu Tech</title>
-  <meta name="description" content="Exploring screen-free audio storytelling to support listening, language development and autonomy in Early Years and early primary education.">
-  <meta property="og:title" content="Schools · Screen-free Audio Storytelling · Kairu Tech">
-  <meta property="og:description" content="A short page for schools: exploring audio storytelling without screens in Early Years and early primary.">
+  <title>Schools · Audio Storytelling (Screen-free) · Kairu Tech</title>
+  <meta name="description" content="Exploring screen-free audio storytelling to support listening, language development and calm classroom routines in Early Years and early primary education.">
+  <meta property="og:title" content="Schools · Audio Storytelling (Screen-free) · Kairu Tech">
+  <meta property="og:description" content="A short, school-friendly page about screen-free audio storytelling in Early Years and early primary education.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://kairu.tech/og-image.jpg">
   <link rel="icon" href="/favicon.ico">
@@ -32,10 +32,12 @@
 
 <body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
 
+<!-- Header (minimal) -->
 <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
   <div class="mx-auto px-4 sm:px-6 container-narrow">
     <div class="flex items-center justify-between h-16">
-      <a href="/en/" class="flex items-center gap-3">
+
+      <a href="/" class="flex items-center gap-3">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600">
           <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z"
             stroke="currentColor" stroke-width="1.2" fill="none"/>
@@ -43,13 +45,10 @@
         <span class="font-semibold text-lg">Kairu <span class="text-kairu-600">Tech</span></span>
       </a>
 
-      <!-- Keep nav minimal (not adding Schools) -->
-      <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="/en/" class="hover:text-kairu-600">Home</a>
-        <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
-        <span class="text-slate-300">|</span>
-        <a href="/" class="hover:text-kairu-600">ES</a>
-        <a href="/en/contact.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white">
+      <nav class="hidden md:flex items-center gap-3 text-sm">
+        <!-- Update this email address -->
+        <a href="mailto:hello@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
+           class="px-4 py-2 rounded-xl bg-kairu-600 text-white">
           Let’s talk
         </a>
       </nav>
@@ -64,10 +63,7 @@
 
   <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
     <div class="px-4 py-3 flex flex-col gap-3 text-sm">
-      <a href="/en/" class="hover:text-kairu-600">Home</a>
-      <a href="/en/contact.html" class="hover:text-kairu-600">Contact</a>
-      <a href="/" class="hover:text-kairu-600">ES</a>
-      <a href="/en/contact.html"
+      <a href="mailto:hello@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
          class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">
         Let’s talk
       </a>
@@ -86,15 +82,20 @@
         </h1>
 
         <p class="mt-5 text-lg text-slate-600">
-          This page provides context about an ongoing exploration into how
-          <strong>screen-free audio storytelling</strong> can support listening, language development
-          and autonomy in <strong>Early Years and early primary education</strong>.
+          In early years education, children learn through listening, imagination and repetition.
+          <strong>Stories, voices and rhythm</strong> help shape language, attention and emotional understanding.
+        </p>
+
+        <p class="mt-4 text-lg text-slate-600">
+          This page introduces a simple idea: using <strong>screen-free audio storytelling</strong> to support
+          classroom routines in <strong>Early Years and early primary education</strong> — creating calm,
+          focused moments for listening, storytime and independent learning.
         </p>
 
         <div class="mt-6 flex gap-3 flex-wrap">
-          <a href="/en/contact.html"
+          <a href="mailto:hello@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
              class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-            Get in touch
+            Start a conversation
           </a>
           <a href="#how" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
             How it works
@@ -102,7 +103,7 @@
         </div>
 
         <div class="mt-6 text-xs text-slate-500">
-          Screen-free learning · Listening & language · Classroom routines · Ages 3–8
+          Screen-free learning · Listening & language · Storytime & routines · Ages 3–8
         </div>
       </div>
 
@@ -131,14 +132,14 @@
       <div class="card p-6">
         <h3 class="font-semibold">Listening & comprehension</h3>
         <p class="mt-2 text-sm text-slate-600">
-          How audio storytelling supports attention, listening skills and narrative understanding in Early Years.
+          Supporting attention, listening skills and narrative understanding through regular storytelling moments.
         </p>
       </div>
 
       <div class="card p-6">
         <h3 class="font-semibold">Language exposure</h3>
         <p class="mt-2 text-sm text-slate-600">
-          How regular listening moments can reinforce vocabulary and oral language naturally, without screens.
+          Natural language practice through stories — in English or Spanish — without screens or complex setup.
         </p>
       </div>
 
@@ -162,7 +163,7 @@
         <p class="text-xs uppercase tracking-wider text-slate-500">Step 1</p>
         <h3 class="font-semibold mt-1">A short conversation</h3>
         <p class="text-sm text-slate-600 mt-2">
-          A quick exchange with a member of your leadership or early years team to understand your context and routines.
+          A quick exchange with a member of your team to understand your context, ages and daily routines.
         </p>
       </div>
 
@@ -170,7 +171,7 @@
         <p class="text-xs uppercase tracking-wider text-slate-500">Step 2</p>
         <h3 class="font-semibold mt-1">Fit & conditions</h3>
         <p class="text-sm text-slate-600 mt-2">
-          We identify if this approach could be relevant, and what would be required for it to be useful in practice.
+          We identify whether this approach could be useful, and what would be required to make it work in practice.
         </p>
       </div>
 
@@ -178,7 +179,7 @@
         <p class="text-xs uppercase tracking-wider text-slate-500">Step 3</p>
         <h3 class="font-semibold mt-1">Optional pilot idea</h3>
         <p class="text-sm text-slate-600 mt-2">
-          If relevant, we outline what a low-risk pilot could look like (without impacting your existing program).
+          If relevant, we outline what a low-risk pilot could look like, aligned with your existing classroom routines.
         </p>
       </div>
     </div>
@@ -191,14 +192,14 @@
     <div class="md:col-span-2">
       <h2 class="text-3xl font-bold">Open to a brief conversation</h2>
       <p class="mt-2 text-white/80">
-        If audio storytelling without screens is relevant to your early years context,
+        If screen-free audio storytelling is relevant to your early years context,
         I’d be happy to exchange perspectives and learn from your experience.
       </p>
     </div>
     <div class="md:justify-self-end">
-      <a href="/en/contact.html"
+      <a href="mailto:hello@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
          class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
-        Contact
+        Let’s talk
       </a>
     </div>
   </div>
