--- a/en/schools.html
+++ b/en/schools.html
@@ -107,15 +107,27 @@
         </div>
       </div>
 
+      <!-- Right hero card: What we are exploring -->
       <div class="card p-6">
-        <h2 class="text-lg font-semibold">Important note</h2>
-        <p class="mt-3 text-sm text-slate-700">
-          This is <strong>not a sales page</strong> and does not promote a specific product.
-          The goal is to learn from schools and understand whether this approach is pedagogically relevant,
-          and under what conditions it makes sense in practice.
-        </p>
+        <h2 class="text-lg font-semibold">What we are exploring</h2>
+
+        <ul class="mt-4 space-y-3 text-sm text-slate-700">
+          <li>
+            <strong>Listening & comprehension:</strong>
+            how regular audio storytelling supports attention and narrative understanding.
+          </li>
+          <li>
+            <strong>Language exposure:</strong>
+            stories and voices as a natural way to reinforce oral language (English or Spanish).
+          </li>
+          <li>
+            <strong>Calm routines & autonomy:</strong>
+            storytime, listening corners and transitions without screens.
+          </li>
+        </ul>
+
         <p class="mt-4 text-xs text-slate-500">
-          Short conversations · No commitment · No disruption to current routines
+          Early Years & early primary · Ages 3–8 · Screen-free by design
         </p>
       </div>
 
@@ -123,32 +135,49 @@
   </div>
 </section>
 
-<!-- WHAT -->
+<!-- WHAT (3 cards) -->
 <section class="py-16 bg-white/60 border-y border-slate-200/60">
   <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <h2 class="text-3xl font-bold">What we are exploring</h2>
+    <h2 class="text-3xl font-bold">What this can support in practice</h2>
 
     <div class="mt-6 grid md:grid-cols-3 gap-6">
       <div class="card p-6">
-        <h3 class="font-semibold">Listening & comprehension</h3>
+        <h3 class="font-semibold">Everyday storytime</h3>
         <p class="mt-2 text-sm text-slate-600">
-          Supporting attention, listening skills and narrative understanding through regular storytelling moments.
+          Regular listening moments that reinforce narrative, vocabulary and comprehension.
         </p>
       </div>
 
       <div class="card p-6">
-        <h3 class="font-semibold">Language exposure</h3>
+        <h3 class="font-semibold">Calm & focused transitions</h3>
         <p class="mt-2 text-sm text-slate-600">
-          Natural language practice through stories — in English or Spanish — without screens or complex setup.
+          Simple routines for settling the class, quiet corners and smooth transitions.
         </p>
       </div>
 
       <div class="card p-6">
-        <h3 class="font-semibold">Calm routines & autonomy</h3>
+        <h3 class="font-semibold">Independent listening</h3>
         <p class="mt-2 text-sm text-slate-600">
-          Practical classroom uses: listening corners, calm time, transitions and independent learning moments.
+          Screen-free independent learning moments that support autonomy and attention.
         </p>
       </div>
+    </div>
+  </div>
+</section>
+
+<!-- IMPORTANT NOTE (moved down) -->
+<section class="py-12">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <div class="card p-6">
+      <h2 class="text-lg font-semibold">Important note</h2>
+      <p class="mt-3 text-sm text-slate-700">
+        This is <strong>not a sales initiative</strong> and does not promote a specific product.
+        The goal is to learn from schools and understand whether this approach is pedagogically relevant,
+        and under what conditions it makes sense in practice.
+      </p>
+      <p class="mt-4 text-xs text-slate-500">
+        Short conversations · No commitment · No disruption to current routines
+      </p>
     </div>
   </div>
 </section>
