--- a/en/schools.html
+++ b/en/schools.html
@@ -46,7 +46,6 @@
       </a>
 
       <nav class="hidden md:flex items-center gap-3 text-sm">
-        <!-- Update this email address -->
         <a href="mailto:hello@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
            class="px-4 py-2 rounded-xl bg-kairu-600 text-white">
           Let’s talk
@@ -107,7 +106,7 @@
         </div>
       </div>
 
-      <!-- Right hero card: What we are exploring -->
+      <!-- Right hero card -->
       <div class="card p-6">
         <h2 class="text-lg font-semibold">What we are exploring</h2>
 
@@ -135,7 +134,7 @@
   </div>
 </section>
 
-<!-- WHAT (3 cards) -->
+<!-- WHAT THIS CAN SUPPORT (directly after hero) -->
 <section class="py-16 bg-white/60 border-y border-slate-200/60">
   <div class="mx-auto px-4 sm:px-6 container-narrow">
     <h2 class="text-3xl font-bold">What this can support in practice</h2>
@@ -161,23 +160,6 @@
           Screen-free independent learning moments that support autonomy and attention.
         </p>
       </div>
-    </div>
-  </div>
-</section>
-
-<!-- IMPORTANT NOTE (moved down) -->
-<section class="py-12">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <div class="card p-6">
-      <h2 class="text-lg font-semibold">Important note</h2>
-      <p class="mt-3 text-sm text-slate-700">
-        This is <strong>not a sales initiative</strong> and does not promote a specific product.
-        The goal is to learn from schools and understand whether this approach is pedagogically relevant,
-        and under what conditions it makes sense in practice.
-      </p>
-      <p class="mt-4 text-xs text-slate-500">
-        Short conversations · No commitment · No disruption to current routines
-      </p>
     </div>
   </div>
 </section>
@@ -215,6 +197,23 @@
   </div>
 </section>
 
+<!-- IMPORTANT NOTE (after How it works) -->
+<section class="py-10">
+  <div class="mx-auto px-4 sm:px-6 container-narrow">
+    <div class="card p-6">
+      <h2 class="text-lg font-semibold">Important note</h2>
+      <p class="mt-3 text-sm text-slate-700">
+        This is <strong>not a sales initiative</strong> and does not promote a specific product.
+        The goal is to learn from schools and understand whether this approach is pedagogically relevant,
+        and under what conditions it makes sense in practice.
+      </p>
+      <p class="mt-4 text-xs text-slate-500">
+        Short conversations · No commitment · No disruption to current routines
+      </p>
+    </div>
+  </div>
+</section>
+
 <!-- CTA -->
 <section class="py-16 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
   <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
@@ -226,7 +225,7 @@
       </p>
     </div>
     <div class="md:justify-self-end">
-      <a href="mailto:hello@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
+      <a href="mailto:alex@kairu.tech?subject=Schools%20-%20Audio%20Storytelling%20(3%E2%80%938)%20-%20Quick%20chat"
          class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
         Let’s talk
       </a>
