--- a/engineering.html
+++ b/engineering.html
@@ -206,11 +206,11 @@
             </div>
             <input class="ba-range" type="range" min="0" max="100" value="55" aria-label="Comparar antes y después">
           </div>
-
           <div class="mt-2 flex justify-between text-xs text-slate-500">
-            <span>Antes</span>
-            <span>Después</span>
-          </div>
+  <span>Captura (dron)</span>
+  <span>Visualización</span>
+</div>
+
 
           <p class="mt-2 text-[11px] text-slate-400">
             Visualización conceptual con fines explicativos.
